2012-02-22  0.6.4
    * Add support for enabling/disabling effects in config.yml
    * Add Leggings + Punch = rocket launch pants (double-tap shift)
    * Add Flint & Steel + Blast Protection = anti-creeper (cancel nearby explosion)
    * Add Flint & Steel + Punch = cannon
    * Add Chestplate + Silk Touch = cactus protection (no contact damage)
    * Add Axe + Aqua Affinity = slowness effect (like Bow, but melee attack) (ticket 1)
    * Add Axe + Respiration = generate tree
    * Add Hoe + Fire Protection = sensor
    * Add support for enchantments on RP2/IC2/other items (see config.yml)
    * Change Boots + Punch = hover jump, now activated by double-tapping shift
      Fixes conflict with Shift for sneaking
    * Improve Shovel + Power = excavate, now can excavate sand by default
    * Improve potion effects, now applies to all living entities and uses new API
    * Fix Pickaxe + Power, now only breaks blocks when left-clicking

2012-02-18  0.5.7
    * Add Bow + Respiration = stapled arrows (attach adjacent item in inventory)
    * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
    * Add Sword + Fire Protection = return to player when dropped in lava
    * Add Pickaxe + Looting = deconstruct (reverse crafting)
    * Add Hoe + Power = move time
    * Add Hoe + Bane of Arthropods = toggle downfall
    * Add Shears + Power = hedge/trimmer builder effect, right-click leaves to build
    * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt, now drops natural item if unsmeltable
    * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
    * Improve Boots + Punch = hover jump, now only jumps when press Shift, not release
    * Improve Boots + Punch = hover jump, now preserves horizontal momentum
    * Improve Chestplate + Infinity = god mode, now maxes out food level and health
    * Improve Shears + Looting, now can also collect leather from cows